--- a/index.html
+++ b/index.html
@@ -1,1 +1,216 @@
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+<meta charset="UTF-8">
+<title>Kattguide</title>
 
+<style>
+  body {
+    margin: 0;
+    font-family: "Segoe UI", sans-serif;
+    background: linear-gradient(135deg, #fdfbfb, #ebedee);
+  }
+
+  header {
+    background: #6c63ff;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  }
+
+  header h1 { margin: 0; }
+
+  .controls {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 15px;
+    max-width: 1000px;
+    margin: auto;
+    flex-wrap: wrap;
+  }
+
+  .controls input, .controls select {
+    padding: 8px;
+    border-radius: 8px;
+    border: none;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    max-width: 1100px;
+    margin: auto;
+  }
+
+  .card {
+    background: white;
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+  }
+
+  .card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .card-content {
+    padding: 15px;
+  }
+
+  button {
+    background: #6c63ff;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+
+  /* Modal */
+  .modal {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.6);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 12px;
+    max-width: 500px;
+  }
+
+  footer {
+    text-align: center;
+    padding: 10px;
+    color: #777;
+  }
+</style>
+</head>
+<body>
+
+<header>
+  <h1 id="title">🐾 Kattguide</h1>
+  <p id="subtitle">Upptäck olika kattraser</p>
+</header>
+
+<div class="controls">
+  <input type="text" id="search" placeholder="Sök ras...">
+  <select id="language">
+    <option value="sv">Svenska</option>
+    <option value="en">English</option>
+    <option value="es">Español</option>
+  </select>
+</div>
+
+<div class="container" id="cards"></div>
+
+<div class="modal" id="modal">
+  <div class="modal-content">
+    <h2 id="modalTitle"></h2>
+    <p id="modalText"></p>
+    <button onclick="closeModal()">OK</button>
+  </div>
+</div>
+
+<footer>© Kattguide 🐱</footer>
+
+<script>
+const data = [
+  {
+    img:"https://upload.wikimedia.org/wikipedia/commons/3/3a/Norwegian_Forest_Cat.jpg",
+    sv:{name:"Norsk skogskatt",desc:"Stor, långhårig och tålig.",more:"Vänlig, självständig, kräver regelbunden pälsvård."},
+    en:{name:"Norwegian Forest Cat",desc:"Large and fluffy.",more:"Friendly, independent, needs grooming."},
+    es:{name:"Gato del Bosque Noruego",desc:"Grande y peludo.",more:"Amigable e independiente."}
+  },
+  {
+    img:"https://upload.wikimedia.org/wikipedia/commons/5/5a/Maine_Coon_cat_by_Tomitheos.JPG",
+    sv:{name:"Maine Coon",desc:"Vänlig jätte.",more:"Social, intelligent, passar familjer."},
+    en:{name:"Maine Coon",desc:"Gentle giant.",more:"Social and intelligent."},
+    es:{name:"Maine Coon",desc:"Gigante amable.",more:"Muy sociable."}
+  },
+  {
+    img:"https://upload.wikimedia.org/wikipedia/commons/6/64/Ragdoll_blue_point.jpg",
+    sv:{name:"Ragdoll",desc:"Lugn och tillgiven.",more:"Slappnar av när man lyfter den."},
+    en:{name:"Ragdoll",desc:"Calm and loving.",more:"Very relaxed temperament."},
+    es:{name:"Ragdoll",desc:"Tranquilo y cariñoso.",more:"Muy dócil."}
+  },
+  {
+    img:"https://upload.wikimedia.org/wikipedia/commons/1/12/Birman_cat.jpg",
+    sv:{name:"Birma",desc:"Elegant och social.",more:"Blå ögon, vita tassar."},
+    en:{name:"Birman",desc:"Elegant and social.",more:"Blue eyes, white paws."},
+    es:{name:"Birmano",desc:"Elegante y social.",more:"Ojos azules."}
+  },
+  {
+    img:"https://upload.wikimedia.org/wikipedia/commons/b/b7/Bengal_Cat_%28Felis_catus%29.jpg",
+    sv:{name:"Bengal",desc:"Aktiv och vildlik.",more:"Mycket energisk."},
+    en:{name:"Bengal",desc:"Active and wild-looking.",more:"Very energetic."},
+    es:{name:"Bengalí",desc:"Activo y salvaje.",more:"Muy energético."}
+  },
+  {
+    img:"https://upload.wikimedia.org/wikipedia/commons/0/0b/Burmese_cat.jpg",
+    sv:{name:"Burma",desc:"Människokär.",more:"Lekfull och sällskaplig."},
+    en:{name:"Burmese",desc:"People-loving.",more:"Playful."},
+    es:{name:"Birmano",desc:"Cariñoso.",more:"Muy sociable."}
+  },
+  {
+    img:"https://upload.wikimedia.org/wikipedia/commons/5/5b/Cornish_Rex.jpg",
+    sv:{name:"Cornish Rex",desc:"Lockig päls.",more:"Extremt lekfull."},
+    en:{name:"Cornish Rex",desc:"Curly coat.",more:"Very playful."},
+    es:{name:"Cornish Rex",desc:"Pelaje rizado.",more:"Muy juguetón."}
+  },
+  {
+    img:"https://upload.wikimedia.org/wikipedia/commons/2/25/Siamese_cat.jpg",
+    sv:{name:"Siames",desc:"Pratsam och smart.",more:"Mycket social."},
+    en:{name:"Siamese",desc:"Vocal and smart.",more:"Very social."},
+    es:{name:"Siamés",desc:"Muy comunicativo.",more:"Muy sociable."}
+  }
+];
+
+const cards = document.getElementById("cards");
+const search = document.getElementById("search");
+const language = document.getElementById("language");
+let lang = "sv";
+
+function render() {
+  cards.innerHTML = "";
+  data.filter(c => c[lang].name.toLowerCase().includes(search.value.toLowerCase()))
+    .forEach(cat => {
+      const div = document.createElement("div");
+      div.className = "card";
+      div.innerHTML = `
+        <img src="${cat.img}">
+        <div class="card-content">
+          <h3>${cat[lang].name}</h3>
+          <p>${cat[lang].desc}</p>
+          <button onclick="openModal('${cat[lang].name}','${cat[lang].more}')">
+            ${lang==="sv"?"Läs mer":lang==="en"?"Read more":"Leer más"}
+          </button>
+        </div>`;
+      cards.appendChild(div);
+    });
+}
+
+function openModal(title,text){
+  document.getElementById("modalTitle").textContent = title;
+  document.getElementById("modalText").textContent = text;
+  document.getElementById("modal").style.display="flex";
+}
+function closeModal(){document.getElementById("modal").style.display="none";}
+
+search.oninput = render;
+language.onchange = e => { lang = e.target.value; render(); };
+
+render();
+</script>
+
+</body>
+</html>
